<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/editor_textView"
            android:text="@string/title" />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:textSize="26sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/editor_textView"
            android:text="@string/subtitle" />

        <EditText
            android:id="@+id/subtitle_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/weather_image"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editor_textView"
                android:text="@string/weather"/>

            <Spinner
                android:id="@+id/spinner_weather"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editor_textView"
        android:text="@string/note"
        android:gravity="left"
        android:paddingLeft="24dp"/>

    <EditText
        android:id="@+id/message_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:hint="@string/note_hint"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:padding="8dp"
        android:layout_margin="8dp"/>

</LinearLayout>